#
# Copyright by The HDF Group.
# Copyright by the Board of Trustees of the University of Illinois.
# All rights reserved.
#
# This file is part of HDF5.  The full HDF5 copyright notice, including
# terms governing use, modification, and redistribution, is contained in
# the COPYING file, which can be found at the root of the source code
# distribution tree, or in https://www.hdfgroup.org/licenses.
# If you do not have access to either file, you may request a copy from
# help@hdfgroup.org.
##
## Makefile.am
## Run automake to generate a Makefile.in from this file.
##

if H5D
DO_H5D=H5D
endif

if H5G
DO_H5G=H5G
endif

if H5T
DO_H5T=H5T
endif

SUBDIRS = $(DO_H5D) $(DO_H5G) $(DO_H5T)
